[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
aes-gcm = "0.10.3"
curve25519-dalek = "4.1.2"
hex = "0.4.3"
nazgul = "1.0.0"
rand = "0.8.5"
ring = "0.17.8"
rsa = { version = "0.9.6", features = ["serde"] }
serde = { version = "1.0.201", features = ["derive"] }
sha2 = "0.10.8"
