[package]
name = "drand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drand-client-rs = "0.1.0"
hex = "0.4.3"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["sync"] }
tracing = "0.1.40"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] }
